--- a/pr_01_resume_template.html
+++ b/pr_01_resume_template.html
@@ -1,169 +1,212 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Practice_01 (Resume)</title>
-</head>
+  </head>
 
-<body>
-    <p>
-        Contents
-    </p>
+  <body>
+    <p>Contents</p>
     <ol>
-        <li>
-            <a href="" target="_blank">Resume</a>
-        </li>
-        <li>
-            <a href="" target="_blank">About</a>
-        </li>
-        <li>
-            <a href="" target="_blank">Work History</a>
-        </li>
+      <li>
+        <a href="" target="_blank">Resume</a>
+      </li>
+      <li>
+        <a href="" target="_blank">About</a>
+      </li>
+      <li>
+        <a href="" target="_blank">Work History</a>
+      </li>
     </ol>
 
-    <br>
+    <br />
 
     <h2>Resume</h2>
 
     <table border="1">
-        <thead>
-            <tr>
-                <th colspan="25" rowspan="20">Personal Details</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th colspan="2">Name</th>
-                <td colspan="6">Jane Austen</td>
-                <th colspan="3">Gender</th>
-                <td colspan="3">Female</td>
-                <th colspan="3">Pronoun</th>
-                <td colspan="3">Her</td>
-                <td colspan="5" rowspan="4"><img src="https://cdn.britannica.com/12/172012-050-A9AFF8AF/Jane-Austen-Cassandra-engraving-portrait-1810.jpg" style="width: 120px;" alt="photo"></td>
-           </tr>
-            <tr>
-                <th colspan="2">D.O.B</th>
-                <td colspan="6">16 Dec 1775</td>
-                <th colspan="3">Nationality</th>
-                <td colspan="3">Great Britain</td>
-                <th colspan="3">Occupation</th>
-                <td colspan="3">Writer</td>
-           </tr>
-           <tr>
-               <th colspan="2">Address</th>
-               <td colspan="18"><br>Winchester, Hampshire, England<br><br></td>
-            </tr>
-            <tr>
-                <th colspan="2">Religion</th>
-                <td colspan="3">Atheist</td>
-                <th colspan="3">Hobby</th>
-                <td colspan="3">Reading Books</td>
-                <th colspan="3">Skills</th>
-                <td colspan="5">Creative Writing</td>
-           </tr>
-        </tbody>
-        <thead>
-            <tr>
-                <th colspan="25" rowspan="20">Academic Background</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th colspan="5">Timeline</th>
-                <th colspan="3">Degree</th>
-                <th colspan="5">Name of Institution</th>
-                <th colspan="4">Area of Study</th>
-                <th colspan="4">Grade</th>
-                <th colspan="4">Location</th>
-           </tr>
-            <tr>
-                <td colspan="5">1783.01.01-1784.09.15</td>
-                <td colspan="3">Elementary</td>
-                <td colspan="5">Oxford</td>
-                <td colspan="4">Mrs Ann Cawley</td>
-                <td colspan="4">Dropout</td>
-                <td colspan="4">Southampton</td>
-           </tr>
-            <tr>
-                <td colspan="5">1783.01.01-1784.09.15</td>
-                <td colspan="3">Elementary</td>
-                <td colspan="5">Oxford</td>
-                <td colspan="4">Mrs Ann Cawley</td>
-                <td colspan="4">Dropout</td>
-                <td colspan="4">Southampton</td>
-           </tr>
-            <tr>
-                <td colspan="5">1783.01.01-1784.09.15</td>
-                <td colspan="3">Elementary</td>
-                <td colspan="5">Oxford</td>
-                <td colspan="4">Mrs Ann Cawley</td>
-                <td colspan="4">Dropout</td>
-                <td colspan="4">Southampton</td>
-           </tr>
-            <tr>
-                <td colspan="5">1783.01.01-1784.09.15</td>
-                <td colspan="3">Elementary</td>
-                <td colspan="5">Oxford</td>
-                <td colspan="4">Mrs Ann Cawley</td>
-                <td colspan="4">Dropout</td>
-                <td colspan="4">Southampton</td>
-           </tr>
-           <thead>
-            <tr>
-                <th colspan="25" rowspan="20">Work History</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th colspan="5">Timeline</th>
-                <th colspan="3">Degree</th>
-                <th colspan="5">Name of Institution</th>
-                <th colspan="4">Area of Study</th>
-                <th colspan="4">Grade</th>
-                <th colspan="4">Location</th>
-           </tr>
-            <tr>
-                <td colspan="5">1783.01.01-1784.09.15</td>
-                <td colspan="3">Elementary</td>
-                <td colspan="5">Oxford</td>
-                <td colspan="4">Mrs Ann Cawley</td>
-                <td colspan="4">Dropout</td>
-                <td colspan="4">Southampton</td>
-           </tr>
-            <tr>
-                <td colspan="5">1783.01.01-1784.09.15</td>
-                <td colspan="3">Elementary</td>
-                <td colspan="5">Oxford</td>
-                <td colspan="4">Mrs Ann Cawley</td>
-                <td colspan="4">Dropout</td>
-                <td colspan="4">Southampton</td>
-           </tr>
-            <tr>
-                <td colspan="5">1783.01.01-1784.09.15</td>
-                <td colspan="3">Elementary</td>
-                <td colspan="5">Oxford</td>
-                <td colspan="4">Mrs Ann Cawley</td>
-                <td colspan="4">Dropout</td>
-                <td colspan="4">Southampton</td>
-           </tr>
-            <tr>
-                <td colspan="5">1783.01.01-1784.09.15</td>
-                <td colspan="3">Elementary</td>
-                <td colspan="5">Oxford</td>
-                <td colspan="4">Mrs Ann Cawley</td>
-                <td colspan="4">Dropout</td>
-                <td colspan="4">Southampton</td>
-           </tr>
-            <!-- <tr>
-                <th colspan=""></th>
-                <td colspan=""></td>
-                <th colspan=""></th>
-                <td colspan=""></td>
-                <th colspan=""></th>
-                <td colspan=""></td>
-            </tr> -->
-        </tbody>
+      <thead>
+        <tr>
+          <th colspan="25" rowspan="20">Personal Details</th>
+        </tr>
+      </thead>
+      
+      <tbody>
+        <tr>
+          <th colspan="2">Name</th>
+          <td colspan="6">Jane Austen</td>
+          <th colspan="3">Gender</th>
+          <td colspan="3">Female</td>
+          <th colspan="3">Pronoun</th>
+          <td colspan="3">Her</td>
+          <td colspan="5" rowspan="4">
+            <img
+              src="https://cdn.britannica.com/12/172012-050-A9AFF8AF/Jane-Austen-Cassandra-engraving-portrait-1810.jpg"
+              style="width: 120px"
+              alt="photo"
+            />
+          </td>
+        </tr>
+        <tr>
+          <th colspan="2">D.O.B</th>
+          <td colspan="6">16 Dec 1775</td>
+          <th colspan="3">Nationality</th>
+          <td colspan="3">Great Britain</td>
+          <th colspan="3">Occupation</th>
+          <td colspan="3">Writer</td>
+        </tr>
+        <tr>
+          <th colspan="2">Address</th>
+          <td colspan="18"><br />Winchester, Hampshire, England<br /><br /></td>
+        </tr>
+        <tr>
+          <th colspan="2">Religion</th>
+          <td colspan="3">Atheist</td>
+          <th colspan="3">Hobby</th>
+          <td colspan="3">Reading Books</td>
+          <th colspan="3">Skills</th>
+          <td colspan="5">Creative Writing</td>
+        </tr>
+      </tbody>
+
+      <thead>
+        <tr>
+          <th colspan="25" rowspan="20">Academic Background</th>
+        </tr>
+      </thead>
+      
+      <tbody>
+        <tr>
+          <th colspan="5">Timeline</th>
+          <th colspan="3">Degree</th>
+          <th colspan="5">Name of Institution</th>
+          <th colspan="4">Area of Study</th>
+          <th colspan="4">Grade</th>
+          <th colspan="4">Location</th>
+        </tr>
+        <tr>
+          <td colspan="5">1783.01.01-1784.09.15</td>
+          <td colspan="3">Elementary</td>
+          <td colspan="5">Oxford</td>
+          <td colspan="4">Mrs Ann Cawley</td>
+          <td colspan="4">Dropout</td>
+          <td colspan="4">Southampton</td>
+        </tr>
+        <tr>
+          <td colspan="5">1783.01.01-1784.09.15</td>
+          <td colspan="3">Elementary</td>
+          <td colspan="5">Oxford</td>
+          <td colspan="4">Mrs Ann Cawley</td>
+          <td colspan="4">Dropout</td>
+          <td colspan="4">Southampton</td>
+        </tr>
+        <tr>
+          <td colspan="5">1783.01.01-1784.09.15</td>
+          <td colspan="3">Elementary</td>
+          <td colspan="5">Oxford</td>
+          <td colspan="4">Mrs Ann Cawley</td>
+          <td colspan="4">Dropout</td>
+          <td colspan="4">Southampton</td>
+        </tr>
+        <tr>
+          <td colspan="5">1783.01.01-1784.09.15</td>
+          <td colspan="3">Elementary</td>
+          <td colspan="5">Oxford</td>
+          <td colspan="4">Mrs Ann Cawley</td>
+          <td colspan="4">Dropout</td>
+          <td colspan="4">Southampton</td>
+        </tr>
+      </tbody>
+
+      <thead>
+        <tr>
+          <th colspan="25" rowspan="20">Work History</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <th colspan="5">Dates Employed</th>
+          <th colspan="4">Job Title/Position</th>
+          <th colspan="4">Company Name</th>
+          <th colspan="8">Responsibilities</th>
+          <th colspan="4">Location</th>
+        </tr>
+        <tr>
+          <td colspan="5">1783.01.01-1784.09.15</td>
+          <td colspan="4">Elementary</td>
+          <td colspan="4">Oxford</td>
+          <td colspan="8">Mrs Ann Cawley</td>
+          <td colspan="4">Southampton</td>
+        </tr>
+        <tr>
+          <td colspan="5">1783.01.01-1784.09.15</td>
+          <td colspan="4">Elementary</td>
+          <td colspan="4">Oxford</td>
+          <td colspan="8">Mrs Ann Cawley</td>
+          <td colspan="4">Southampton</td>
+        </tr>
+        <tr>
+          <td colspan="5">1783.01.01-1784.09.15</td>
+          <td colspan="4">Elementary</td>
+          <td colspan="4">Oxford</td>
+          <td colspan="8">Mrs Ann Cawley</td>
+          <td colspan="4">Southampton</td>
+        </tr>
+        <tr>
+          <td colspan="5">1783.01.01-1784.09.15</td>
+          <td colspan="4">Elementary</td>
+          <td colspan="4">Oxford</td>
+          <td colspan="8">Mrs Ann Cawley</td>
+          <td colspan="4">Southampton</td>
+        </tr>
+      </tbody>
+
+      <thead>
+        <tr>
+          <th colspan="12" rowspan="10">Certifications</th>
+          <th colspan="13" rowspan="10">Languages</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <th colspan="5">Date Earned</th>
+          <th colspan="4">Name of Certification</th>
+          <th colspan="4">Name of Organization</th>
+          <th colspan="6">Language</th>
+          <th colspan="6">Fluency</th>
+        </tr>
+        <tr>
+          <td colspan="5">1783.01.01-1784.09.15</td>
+          <td colspan="4">Elementary</td>
+          <td colspan="4">Oxford</td>
+          <td colspan="6">English</td>
+          <td colspan="6">Native</td>
+        </tr>
+        <tr>
+          <td colspan="5">1783.01.01-1784.09.15</td>
+          <td colspan="4">Elementary</td>
+          <td colspan="4">Oxford</td>
+          <td colspan="6">Mrs Ann Cawley</td>
+          <td colspan="6">Southampton</td>
+        </tr>
+        <tr>
+          <td colspan="5">1783.01.01-1784.09.15</td>
+          <td colspan="4">Elementary</td>
+          <td colspan="4">Oxford</td>
+          <td colspan="6">Mrs Ann Cawley</td>
+          <td colspan="6">Southampton</td>
+        </tr>
+        <tr>
+          <td colspan="5">1783.01.01-1784.09.15</td>
+          <td colspan="4">Elementary</td>
+          <td colspan="4">Oxford</td>
+          <td colspan="6">Mrs Ann Cawley</td>
+          <td colspan="6">Southampton</td>
+        </tr>
+      </tbody>
+
 
     </table>
-</body>
+  </body>
 </html>
